Show CPU speed for ppc64 processors.

https://bugzilla.gnome.org/show_bug.cgi?id=619732